--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ p {
   text-indent: 50px;
 }
 
+a {
+  outline: 0;
+}
+
 .background {
   background-image: url("main4.JPG");
   height: 100vh;
@@ -41,16 +45,19 @@ p {
   /* color: rgb(221, 221, 221); */
   color: rgb(75, 75, 75);
   font-family: Nauman-Med, Helvetica, sans-serif;
+  /* border: 1px solid black; */
 }
 
   .title-container {
     /* border-right: 1px solid white;
     border-left: 1px solid white; */
-    padding: 10px;
-    width: 1000px;
+    /* padding: 10px; */
+    width: 95%;
     margin: auto;
     display: flex;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     /* border: 1px solid black; */
     /* box-shadow: 20px -10px 25px rgb(42, 42, 42), -20px -10px 25px rgb(42, 42, 42); */
   }
@@ -60,20 +67,28 @@ p {
       padding: 10px;
     }
 
-    #linkedInIcon {
+    #left-side {
+      display: flex;
+      flex-direction: column;
+    }
 
+    #right-side {
+      display: flex;
+      flex-direction: row;
     }
 
       .name {
         font-size: 32px;
         display: block;
+        text-shadow: 0px 0px 2px rgb(206, 206, 206);
         /* border: 1px solid black; */
         /* text-shadow: 2px 2px 5px black; */
       }
 
       .name-bottom {
         font-size: 16px;
-        display: block;
+        text-align: right;
+        /* display: block; */
         /* padding-bottom: 10px; */
         /* border: 1px solid black; */
         /* text-shadow: 2px 2px 5px black; */
@@ -81,7 +96,7 @@ p {
 
       .empty-space {
         /* width: 156px; */
-        width: 100px;
+        width: 20px;
       }
 
       .title-sub-container > a {
@@ -97,7 +112,7 @@ p {
   /* background-image: linear-gradient(to bottom right, 
   rgba(255, 187, 0, 0.1), 
   rgba(181, 94, 201, 0.1)); */
-  font-size: 16px;
+  font-size: 12px;
   justify-content: center;
   /* border-width: 1px;
   border-style: solid;
@@ -123,32 +138,129 @@ p {
   border-left: 1px solid rgb(255, 255, 255); */
 }
 
+.dropbtn {
+	display: inline-block;
+	/*background-color: #5a5a5a;*/
+	text-align: center;
+	color: white;
+	text-decoration: none;
+	padding: 10px 25px;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #444444;
+    /* cursor: default; */
+}
+
+.dropdown {
+    display: inline-block;
+    color: black;
+    padding: 6px 20px;
+    text-decoration: none;
+    text-align: center;
+    width: 120px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    background-color: white;
+    color: black;
+    /* padding: 8px 16px; */
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-size: 12px;
+    width: auto;
+}
+
+.dropdown-content a:hover {
+  width: auto;
+  background-color: rgba(15, 189, 88, 0.2);
+  /* cursor: pointer; */
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    /* cursor: pointer; */
+    /* background-color: rgba(15, 189, 88, 0.2); */
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+
+
+
+
 .container {
   display: flex;
+  padding: 20px;
+  /* border: 1px solid black; */
 }
 
   .sub-container {
-    padding-left: 40px;
-    padding-right: 40px;
+    /* padding-left: 40px;
+    padding-right: 40px; */
     padding-bottom: 40px;
     height: 70%;
-    width: 540px;
+    width: 740px;
     margin: auto;
-    border-right: 1px solid black;
+    
+    /* border-right: 1px solid black;
     border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid black; */
   }
+
+  /* .resume-container {
+    padding-bottom: 40px;
+    height: 70%;
+    width: 1000px;
+    margin: auto;
+    border: 1px solid black;
+  } */
 
     .sub-sub-container {
 
       height: 80%;
       margin: auto;
-      color: white;
-      background-color: rgba(51, 51, 51, 1);
+      color: rgb(255, 255, 255);
+      background-color: rgb(95, 98, 96);
+      /* background-color: rgb(92, 92, 92); */
       padding: 80px 60px;
-      font-size: 16px;
-      text-shadow: 1px 1px 1px black;
-      box-shadow: 5px 5px 10px rgb(42, 42, 42);
+      font-size: 12px;
+      box-shadow: inset 0 0 40px #4e4e4e, 0 4px 10px -6px black;
+      /* text-shadow: 1px 1px 1px black; */
+      /* box-shadow: 5px 5px 10px rgb(42, 42, 42), inset 0 0 40px #4e4e4e; */
+      /* border: 1px solid black; */
+    }
+
+    .resume-container {
+      height: 80%;
+      margin: auto;
+      color: rgb(255, 255, 255);
+      background-color: rgb(95, 98, 96);
+      /* background-color: rgb(92, 92, 92); */
+      padding: 80px 60px;
+      font-size: 14px;
+      box-shadow: inset 0 0 40px #4e4e4e, 0 4px 10px -6px black;
+      /* text-shadow: 1px 1px 1px black; */
+      /* box-shadow: 5px 5px 10px rgb(42, 42, 42), inset 0 0 40px #4e4e4e; */
+      /* border: 1px solid black; */
     }
 
       .page-title {
