--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,12 @@
   src: local('MyFont'), url(./Metrisch/FormikaStudioMetrisch/Desktop/Metrisch-Light.otf) format('opentype');
 }
 
+/* span:after,
+span:before{
+    content:"\00a0\00a0\00a0\00a0\00a0";
+    text-decoration:line-through;
+} */
+
 span {
   display: block;
 }
@@ -94,6 +100,14 @@ a {
         /* text-shadow: 2px 2px 5px black; */
       }
 
+      /* .name-bottom-line {
+        width: 40%; 
+        text-align: center; 
+        border-bottom: 1px solid #000; 
+        line-height: 0px;
+        margin: 10px 0 20px; 
+      } */
+
       .empty-space {
         /* width: 156px; */
         width: 20px;
@@ -122,6 +136,7 @@ a {
       rgba(255, 0, 0, 0.9), 
       rgba(255, 0, 255, 0.9)
     ) 1 stretch; */
+  /* border: 1px solid black; */
 }
 
 .navbar a {
@@ -130,13 +145,46 @@ a {
   text-decoration: none;
   text-align: center;
   width: 120px;
+  /* width: 100%;  */
+  /* border: 1px solid black; */
+  /* -webkit-transition: width 2s;
+  transition: width 2s; */
 }
 
-.navbar a:hover {
-  background-color: rgba(15, 189, 88, 0.2);/*rgba(164, 230, 139, 0.4);*/
-  /* border-right: 1px solid rgb(255, 255, 255);
-  border-left: 1px solid rgb(255, 255, 255); */
+.navbar span {
+  display: inline-block;
 }
+
+/* li {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid black;
+  margin: auto;
+  width: 160px;
+} */
+
+#home {
+  -webkit-transition: width 1s; /* Safari */
+  transition: width 1s;
+  /* border: 1px solid black; */
+  width: 50px;
+  /* text-align: center; */
+  /* margin: auto; */
+}
+
+#dash {
+  width: 5px;
+  /* border: 1px solid black; */
+}
+
+#home:hover {
+  width: 100px;
+}
+
+/* .navbar a:hover{
+  /* background-color: rgba(15, 189, 88, 0.2); 
+  width: 40px;
+} */
 
 .dropbtn {
 	display: inline-block;
@@ -164,6 +212,7 @@ a {
 .dropdown-content {
     display: none;
     position: absolute;
+    top: 113px;
     background-color: #f9f9f9;
     width: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
