--- a/src/App.css
+++ b/src/App.css
@@ -147,44 +147,18 @@ a {
   width: 120px;
   /* width: 100%;  */
   /* border: 1px solid black; */
-  /* -webkit-transition: width 2s;
-  transition: width 2s; */
+  -webkit-transition: background-color .2s;
+  transition: background-color .2s;
 }
 
 .navbar span {
   display: inline-block;
 }
 
-/* li {
-  display: flex;
-  flex-direction: row;
-  border: 1px solid black;
-  margin: auto;
-  width: 160px;
-} */
-
-#home {
-  -webkit-transition: width 1s; /* Safari */
-  transition: width 1s;
-  /* border: 1px solid black; */
-  width: 50px;
-  /* text-align: center; */
-  /* margin: auto; */
+.navbar a:hover{
+  background-color: rgba(15, 189, 88, 0.2); 
+  width: 120px;
 }
-
-#dash {
-  width: 5px;
-  /* border: 1px solid black; */
-}
-
-#home:hover {
-  width: 100px;
-}
-
-/* .navbar a:hover{
-  /* background-color: rgba(15, 189, 88, 0.2); 
-  width: 40px;
-} */
 
 .dropbtn {
 	display: inline-block;
@@ -258,8 +232,8 @@ a {
 
 .container {
   display: flex;
-  padding: 20px;
-  /* border: 1px solid black; */
+  /* padding: 20px; */
+  border: 1px solid black;
 }
 
   .sub-container {
@@ -267,9 +241,9 @@ a {
     padding-right: 40px; */
     padding-bottom: 40px;
     height: 70%;
-    width: 740px;
+    width: 640px;
     margin: auto;
-    
+    border: 1px solid black;
     /* border-right: 1px solid black;
     border-left: 1px solid black;
     border-bottom: 1px solid black; */
@@ -295,7 +269,7 @@ a {
       box-shadow: inset 0 0 40px #4e4e4e, 0 4px 10px -6px black;
       /* text-shadow: 1px 1px 1px black; */
       /* box-shadow: 5px 5px 10px rgb(42, 42, 42), inset 0 0 40px #4e4e4e; */
-      /* border: 1px solid black; */
+      border: 1px solid black;
     }
 
     .resume-container {
@@ -317,6 +291,24 @@ a {
         font-size: 20px;
         border-bottom: 1px solid white;
       }
+
+.quickquote-container {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  border: 1px solid black;
+}
+
+  .quickquote-subcontainer {
+    height: 800px;
+    width: 25%;
+    padding: 10px;
+    font-size: 12px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(95, 98, 96);
+    box-shadow: inset 0 0 40px #4e4e4e, 0 4px 10px -6px black;
+    border: 1px solid black;
+  }
 
 .footer {
   /* background-color: rgba(165, 165, 165, 0.1);
