--- a/src/App.css
+++ b/src/App.css
@@ -53,16 +53,23 @@ a {
 /* HEADER */
 
 .title {
+  position: relative;
   background-color: rgba(218, 218, 218, 0);
-  padding: 40px;
-  /* height: 200px; */
+  /* padding: 40px; */
+  height: 160px;
     background-image: linear-gradient(to bottom right, 
   rgba(105, 105, 105, 0.4), 
   rgba(27, 27, 27, 0.4));
-  /* border: 1px solid black; */
+  border: 1px solid black;
 }
 
   .title-container {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
