--- a/src/App.css
+++ b/src/App.css
@@ -346,7 +346,7 @@ a {
   color: rgb(0, 0, 0);
   width: 800px;
   margin: auto;
-  padding: 0px 0px;
+  padding: 0px 0px 40px 0px;
   font-size: 14px;
   /* border: 1px solid black; */
   box-shadow: 5px 10px 18px #161616;
@@ -383,14 +383,17 @@ a {
 
   .section-title {
     font-size: 14px;
+    font-weight: bold;
     padding: 4px;
     text-align: center;
     width: 100%;
     margin: auto;
-    background-image: linear-gradient(to bottom right, 
+    /* box-shadow: 1px 1px 5px #3a3a3a; */
+    background-color: rgb(44, 44, 44);
+    /* background-image: linear-gradient(to bottom right, 
     rgb(75, 75, 75), 
-    rgb(63, 63, 63));
-    color: rgb(255, 255, 255);
+    rgb(63, 63, 63)); */
+    color: rgb(207, 207, 207);
     /* border: 1px solid black; */
   }
 
@@ -471,38 +474,56 @@ a {
 
 /*QUICKQUOTE*/
 
-.stackTable {
-  /* width: 640px; */
-  margin: auto;
-  padding: 20px;
-  font-size: 12px;
-  color: white;
-  background-color: rgb(59, 59, 59);
-  background-image: linear-gradient(to bottom right, 
-  rgba(73, 73, 73, 0.4), 
-  rgba(0, 0, 0, 0.4));
+.table-container {
+  padding-bottom: 40px;
 }
 
-  .table-container {
-    padding-bottom: 40px;
+  .stackTable {
+    /* width: 640px; */
+    border-collapse: collapse;
+    margin: auto;
+    padding: 20px 10px 40px 10px;
+    font-size: 12px;
+    color: white;
+    background-color: rgb(59, 59, 59);
+    background-image: linear-gradient(to bottom right, 
+    rgba(73, 73, 73, 0.4), 
+    rgba(0, 0, 0, 0.4));
   }
 
+    .table-header {
+      font-size: 12px;
+      background-color: rgb(26, 26, 26);
+      padding: 3px;
+
+    }
+
     .colone {
-      width: 80px;
+      width: 90px;
       /* border: 1px solid black; */
-      padding-left: 15px;
+      padding: 0px 0px 0px 15px;
     }
 
     .coltwo {
-      width: 100px;
+      width: 110px;
       color: white;
+      padding: 2px 0px 2px 0px;
       /* border: 1px solid black; */
     }
 
     .colthree {
-      width: 400px;
+      width: 420px;
+      padding: 2px 0px 2px 0px;
       /* border: 1px solid black; */
     }
+
+/*CODE*/
+
+.code-box {
+  background-color: rgb(59, 59, 59);
+  color: white;
+  font-size: 12px;
+}
 
 .footer {
   position: relative;
