--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,7 @@ a {
   background-image: linear-gradient(to bottom right, 
   rgba(105, 105, 105, 0.4), 
   rgba(27, 27, 27, 0.4));
-  height: 70vh;
-  /* height: 2400px; */
+  height: 100vh;
   font-family: Nauman-Med, Helvetica, sans-serif;
 }
 
@@ -223,9 +222,22 @@ a {
     }
 
       .navbar a:hover{
-        background-color: rgba(15, 189, 88, 0.2);
+        background-color: rgba(49, 207, 197, 0.2);
+        /* background-color: rgba(15, 189, 88, 0.2); */
         width: 120px;
+        animation: 0.4s multicolor;
       }
+
+      @keyframes multicolor {
+        0% {
+          background-color: rgba(49, 207, 197, 0.6);
+          /* background-color: rgba(15, 189, 88, 0.6); */
+        }
+        100% {
+          background-color: rgba(49, 207, 197, 0.2);
+          /* background-color: rgba(15, 189, 88, 0.2); */
+        }
+    }
 
       .dropbtn {
         display: inline-block;
@@ -277,7 +289,7 @@ a {
 
             .dropdown-content a:hover {
               width: auto;
-              background-color: rgba(15, 189, 88, 0.2);
+              background-color: rgba(15, 189, 177, 0.2);
               /* cursor: pointer; */
             }
 
@@ -346,9 +358,44 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   height: 69vh;
+  /* opacity: 0.5; */
   /* position: relative; */
   /* z-index: -1; */
   /* bottom: 39px; */
+  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 3s; /* Firefox < 16 */
+   -ms-animation: fadein 3s; /* Internet Explorer */
+    -o-animation: fadein 3s; /* Opera < 12.1 */
+       animation: fadein 3s;
+}
+
+@keyframes fadein {
+  from { opacity: 0.1; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0.1; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0.1; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0.1; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0.1; }
+  to   { opacity: 1; }
 }
 
 .main-container {
@@ -568,6 +615,11 @@ a {
           text-decoration: none;
         }
 
+        .github-link:hover {
+          color: rgb(76, 184, 150);
+          text-decoration: none;
+        }
+
 .scroll-top {
   position: fixed;
   right: 0;
@@ -585,11 +637,18 @@ a {
   text-align: center;
   padding: 20px 20px;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px rgb(42, 42, 42);
+  box-shadow: 2px 2px 5px rgb(26, 26, 26);
+  bottom: 0px;
+  transition: bottom .4s;
+}
+
+.hide{
+  /* display: none; */
+  bottom: -120px;
 }
 
 .scroll-top:hover {
-  background-color: rgba(57, 143, 116, 0.85);
+  background-color: rgba(57, 143, 134, 0.85);
 }
 
 .footer {
