--- a/src/App.css
+++ b/src/App.css
@@ -578,7 +578,8 @@ a {
 
       .zoom {
         height: 200px;
-        padding: 20px;
+        /* padding: 20px; */
+        margin: 20px;
         transition: transform .2s;
         /* width: 200px;
         height: 200px;
@@ -609,6 +610,7 @@ a {
           display: block;
           font-size: 12px;
           text-align: center;
+          /* border: 1px solid black; */
         }
 
         .github-link {
@@ -619,6 +621,15 @@ a {
         .github-link:hover {
           color: rgb(76, 184, 150);
           text-decoration: none;
+        }
+
+        .logo {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 200px;
+          padding: 20px 0px;
+          /* border: 1px solid black; */
         }
 
 .scroll-top {
@@ -634,7 +645,7 @@ a {
   /* width: 60px;
   height: 60px; */
   z-index: 10;
-  margin: 60px 20px;
+  margin: 70px 20px;
   text-align: center;
   padding: 20px 20px;
   border-radius: 10px;
@@ -645,7 +656,7 @@ a {
 
 .hide{
   /* display: none; */
-  bottom: -120px;
+  bottom: -140px;
 }
 
 .scroll-top:hover {
