--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ a {
       display: inline;
       padding: 10px;
       min-width: 150px;
+      /* border: 1px solid hotpink; */
     }
 
       .name {
@@ -127,6 +128,7 @@ a {
       #linkedIn {
         display: inline-block;
         padding: 10px;
+        /* color: white; */
         /* border: 1px solid white; */
       }
 
@@ -204,7 +206,7 @@ a {
   rgba(181, 94, 201, 0.1)); */
   font-size: 12px;
   justify-content: center;
-  z-index: 10;
+  z-index: 15;
   /* border-width: 1px;
   border-style: solid;
   border-image: 
@@ -312,7 +314,7 @@ a {
 
 /* SLIDESHOW */
 
-/* .fadein img {
+.fadein img {
   position: absolute;
   -webkit-animation-name: fade;
   -webkit-animation-iteration-count: infinite;
@@ -320,6 +322,11 @@ a {
   animation-name: fade;
   animation-iteration-count: infinite;
   animation-duration: 12s;
+  height: 50vh;
+  /* width: 200px; */
+  /* min-width: 800px; */
+  object-fit: cover;
+  z-index: 10;
 }
 
   @-webkit-keyframes fade {
@@ -337,14 +344,14 @@ a {
     100% {opacity: 0;}
   }
 
-    #f1 {
+    #g1 {
       width: 100%;
       background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     }
-    #f2 {
+    #g2 {
       -webkit-animation-delay: -8s;
       width: 100%;
       background-attachment: fixed;
@@ -352,14 +359,19 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     }
-    #f3 {
+    #g3 {
       -webkit-animation-delay: -4s;
       width: 100%;
       background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    } */
+    }
+
+    .slideshow-box {
+      /* background-color: white; */
+      height: 50vh;
+    }
 
 /* MAIN CONTENT */
 
@@ -649,7 +661,7 @@ a {
   bottom: 0;
   background-color: rgba(102, 100, 100, 0.85);
   border: none;
-  color: white;
+  color: hotpink;
   /* padding: 12px 30px; */
   cursor: pointer;
   font-size: 14px;
@@ -672,6 +684,10 @@ a {
 
 .scroll-top:hover {
   background-color: rgba(57, 143, 134, 0.85);
+}
+
+.scroll-top-text {
+  color: white;
 }
 
 .footer {
@@ -708,5 +724,4 @@ a {
   /* width: 200px; */
   /* min-width: 800px; */
   object-fit: cover;
-  z-index: 10;
 }
