--- a/src/App.css
+++ b/src/App.css
@@ -646,10 +646,15 @@ a {
 
         .logo {
           display: block;
-          margin-left: auto;
-          margin-right: auto;
+          /* margin-left: auto;
+          margin-right: auto; */
+          /* width: 40%; */
+          /* height: auto; */
+          height: auto;
           width: 200px;
-          padding: 20px 0px;
+          /* height: 100px; */
+          
+          /* padding: 20px 0px; */
           /* border: 1px solid black; */
         }
 
