--- a/src/App.css
+++ b/src/App.css
@@ -456,6 +456,7 @@ a {
     }
 
       .pictureText {
+        
         padding: 0px 80px;
         display: flex;
         /* border: 1px solid blue; */
@@ -644,16 +645,32 @@ a {
           text-decoration: none;
         }
 
-        .logo {
-          display: block;
-          /* margin-left: auto;
-          margin-right: auto; */
-          /* width: 40%; */
-          /* height: auto; */
-          height: auto;
-          width: 200px;
-          /* height: 100px; */
-          
+        .logo1 {
+          height: 120px;
+          width: auto;
+          margin-right: 20px;
+          margin-top: 40px;
+          margin-bottom: 20px;
+          /* padding: 20px 0px; */
+          /* border: 1px solid black; */
+        }
+
+        .logo2 {
+          height: 115px;
+          width: auto;
+          margin-right: 20px;
+          margin-top: 50px;
+          margin-bottom: 80px;
+          /* padding: 20px 0px; */
+          /* border: 1px solid black; */
+        }
+
+        .logo3 {
+          height: 72px;
+          width: auto;
+          margin-right: 20px;
+          margin-top: 20px;
+          margin-bottom: 40px;
           /* padding: 20px 0px; */
           /* border: 1px solid black; */
         }
