--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,6 @@ a {
 
   .title1-container {
     margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
     width: 100%;
     margin: auto;
     display: flex;
@@ -92,13 +88,13 @@ a {
       .name {
         font-size: 36px;
         display: inline;
-        padding-left: 20px;
       }
 
       .name-bottom {
         font-size: 16px;
-        display: inline;
+        display: inline-block;
         padding-left: 10px;
+        padding-top: 10px;
       }
 
       #linkedIn {
@@ -132,7 +128,6 @@ a {
   font-size: 12px;
   justify-content: center;
   z-index: 15;
-  box-shadow: 20px -10px 25px rgb(42, 42, 42), -20px -10px 25px rgb(42, 42, 42);
 }
 
   .navbar1 a {
@@ -278,11 +273,11 @@ a {
   background-color: rgb(211, 211, 211);
   display: block;
   color: rgb(0, 0, 0);
-  width: 800px;
   margin: auto;
   padding: 0px 0px 40px 0px;
   font-size: 14px;
   box-shadow: 5px 10px 18px #161616;
+  overflow:hidden;
 }
 
 .black-bar {
@@ -322,9 +317,8 @@ a {
 
   .bio {
     display: inline-block;
-    text-indent: 50px;
-    padding: 0px 80px;
-    padding-bottom: 20px;
+    text-indent: 8px;
+    padding: 0px 20px 20px 20px;
   }
 
   .bio2 {
