--- a/src/App.css
+++ b/src/App.css
@@ -438,14 +438,16 @@ a {
       }
 
       .bio3 {
-        padding: 20px 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 20px;
       }
 
         .hover-caption {
           display: block;
           font-size: 12px;
           text-align: center;
-          padding: 0px 80px;
+          padding: 0px 5vw;
         }
 
         .github-link {
